<resources>
    <string name="app_name">My Application</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="choose_your_interest">Choose Your Interest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="username_domain">username@domain</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="vi">VI</string>
    <string name="keep_me_signed_in">Keep me Signed in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="music">music</string>
    <string name="dance">dance</string>
    <string name="art_craft"><![CDATA[Art & craft]]></string>
    <string name="animation">animation</string>
    <string name="quotes">quotes</string>
    <string name="drawing">drawing</string>
</resources>