<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interest_choices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sssssconcept">

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:layout_gravity="top"
        android:fontFamily="@font/segoeprb"
        android:gravity="center"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="33sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="3dp" />

    <Button
        android:id="@+id/music"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/music"
        android:textColor="#4A148C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/dance"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/dance"
        android:textColor="#4527A0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/art_and_craft"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/art_craft"
        android:textColor="#4A148C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/animation"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/animation"
        android:textColor="#4A148C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="310dp" />

    <Button
        android:id="@+id/quotes"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/quotes"
        android:textColor="#4A148C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="310dp" />

    <Button
        android:id="@+id/drawing"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:background="@drawable/custombutton"
        android:text="@string/drawing"
        android:textColor="#4A148C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="458dp" />


</androidx.constraintlayout.widget.ConstraintLayout>