<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sssssconcept"

    tools:context=".MainActivity"
    tools:ignore="DuplicateClickableBoundsCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"

        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/vi"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custombutton"
            android:gravity="center"
            android:hint="@string/username"
            android:textColorHint="#FF000000"
            android:autofillHints="username"
            android:inputType="text" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custombutton"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="#FF000000"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:imeActionLabel="action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#FF000000"
            android:text="@string/keep_me_signed_in"
            android:textColor="#FF000000" />

        <Button
            android:id="@+id/signin"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="#3fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forget_password"
            android:textColor="#FF000000"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>









